--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github_username:  HongChangMo
 about_title: 경력
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  ![uwiseone](/images/uwiseone.jpg)
+  ![uwiseone](images/uwiseone.jpg)
 #  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
 #
 #  You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
