--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,16 @@ github_username:  HongChangMo
 about_title: 경력
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  ![uwiseone](images/uwiseone.jpg)
+  - 유와이즈원(팀원/ 기업솔루션파트)
+    - `Smart Runner` 솔루션을 보유한 기업 특화형 그룹웨어 솔루션 회사
+    - 역할 : 그룹웨어 솔루션 `Smart Runner` 백엔드 개발 (SI/SM)
+    - 업무 :
+      - Java, Spring Boot 기반의 신규 시스템 아키텍처 설계 및 핵심 기능 개발을 주도했습니다.
+      - 레거시 시스템의 현대화(Spring Boot 마이그레이션, PL/SQL 로직 전환)를 통해 개발 생산성과 시스템 확장성을 크게 향상시켰습니다.
+      - Oracle에서 PostgreSQL로의 데이터베이스 마이그레이션을 성공적으로 이끌고, 쿼리 튜닝을 통해 서비스 응답 시간을 개선하여 사용자 경험을 최적화했습니다.
+      - JUnit 테스트 코드 도입을 주도하여 비즈니스 로직의 신뢰도를 확보하고, 코드 품질 및 유지보수성을 높였습니다.
+  
+  - 한국문헌정보기술(주)
 #  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
 #
 #  You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
