--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ github_username:  HongChangMo
 about_title: 경력
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  - 유와이즈원(팀원/ 기업솔루션파트)
-    - `Smart Runner` 솔루션을 보유한 기업 특화형 그룹웨어 솔루션 회사
+  ### 유와이즈원(팀원/ 기업솔루션파트)
+    - 소개 : `Smart Runner` 솔루션을 보유한 기업 특화형 그룹웨어 솔루션 회사
     - 역할 : 그룹웨어 솔루션 `Smart Runner` 백엔드 개발 (SI/SM)
     - 업무 :
       - Java, Spring Boot 기반의 신규 시스템 아키텍처 설계 및 핵심 기능 개발을 주도했습니다.
@@ -38,7 +38,16 @@ about_content: | # this will include new lines to allow paragraphs
       - Oracle에서 PostgreSQL로의 데이터베이스 마이그레이션을 성공적으로 이끌고, 쿼리 튜닝을 통해 서비스 응답 시간을 개선하여 사용자 경험을 최적화했습니다.
       - JUnit 테스트 코드 도입을 주도하여 비즈니스 로직의 신뢰도를 확보하고, 코드 품질 및 유지보수성을 높였습니다.
   
-  - 한국문헌정보기술(주)
+  ---
+  
+  ### 한국문헌정보기술(주)
+    - 소개 :  기록관리 표준 및 지침을 준용하고, 다양한 시스템 구축 경험, 기록관리 노하우를 적용하여 기관의 목적에 맞는 기록/ 사료관리시스템 `감어인` 솔루션을 보유한 기록관리 전문기업
+    - 역할 : 기록/사료 관리 솔루션 `감어인` 백엔드 개발 (SI/SM)
+    - 업무 :
+      - Java, 전자정부프레임워크 
+      - 수작업으로 시스템으로 처리하던 썸네일 생성을 자동화하는 Java 프로그램을 개발하여, 외주 비용을 10% 절감하고 업무 소요 기간을 65% 단축시켰습니다.
+      - 솔루션 패키지화를 주도하여 코드와 DBMS를 재사용 가능한 모듈로 만들고, 표준 배포 가이드를 제작하여 신규 시스템 구축 기간 단축 및 개발 효율성 증대에 기여했습니다.
+      - CI/CD 파이프라인을 구축하여 버전 관리 및 배포 프로세스를 효율화하고, 명확한 가이드를 통해 신규 입사자의 교육 및 인수인계 비용을 절감했습니다.
 #  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
 #
 #  You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
