--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github_username:  HongChangMo
 about_title: 경력
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  ### 유와이즈원(팀원/ 기업솔루션파트)
+  #### 유와이즈원(팀원/ 기업솔루션파트)
     - 소개 : `Smart Runner` 솔루션을 보유한 기업 특화형 그룹웨어 솔루션 회사
     - 역할 : 그룹웨어 솔루션 `Smart Runner` 백엔드 개발 (SI/SM)
     - 업무 :
@@ -40,7 +40,7 @@ about_content: | # this will include new lines to allow paragraphs
   
   ---
   
-  ### 한국문헌정보기술(주)
+  #### 한국문헌정보기술(주)
     - 소개 :  기록관리 표준 및 지침을 준용하고, 다양한 시스템 구축 경험, 기록관리 노하우를 적용하여 기관의 목적에 맞는 기록/ 사료관리시스템 `감어인` 솔루션을 보유한 기록관리 전문기업
     - 역할 : 기록/사료 관리 솔루션 `감어인` 백엔드 개발 (SI/SM)
     - 업무 :
